<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="zhesong.madcourse.neu.edu.numad17s_b_zhesong.MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acknowledgement"
        android:text="@string/acknowledgement_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:textAlignment="center"/>


    <TextView
     android:id="@+id/ack1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/ack1"
     android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/ack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ack2"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/ack3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ack3"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/ack4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ack4"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/ack5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ack5"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/ack6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ack6"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
</ScrollView>
