<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="zhesong.madcourse.neu.edu.numad17s_b_zhesong.MainActivity"
    >

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/head_label"
      android:layout_gravity="center"
      android:textAppearance="?android:textAppearanceLarge"
      android:textSize="32sp"/>

    <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_label"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="60dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            style="@android:style/Widget.Button" />


    <Button
        android:id="@+id/ErrorGenerator_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/ErrorGenerator_label"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        style="@android:style/Widget.Button" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/dictionary_label"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        style="@android:style/Widget.Button" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/wordgame_label"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        style="@android:style/Widget.Button" />


</LinearLayout>
</ScrollView>
