<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="zhesong.madcourse.neu.edu.numad17s_b_zhesong.MainActivity"
    >

 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/edit_text"
     android:imeOptions="actionSearch"
     android:hint="Type Your Word"
     android:inputType="text" />
<ListView
    android:id="@+id/lv"
    android:layout_width="match_parent"
    android:layout_height="222dp"
    android:fastScrollEnabled="true"
    android:fastScrollAlwaysVisible="true">
</ListView>

 <Button
     android:id="@+id/clear_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/clear_label"
     android:textAllCaps="false"/>

 <Button
     android:id="@+id/retrun_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/return_label"
     android:textAllCaps="false"/>

    <Button
        android:text="@string/acknowledgement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acbutton"
        android:textAllCaps="false"/>

</LinearLayout>
</ScrollView>
