<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="zhesong.madcourse.neu.edu.numad17s_b_zhesong.MainActivity"
    >
   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Zhe Song"
      android:layout_gravity="center"
      android:textAppearance="?android:textAppearanceLarge"
      android:textSize="32sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email_label"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

 <ImageView
     android:src="@drawable/zhesong"
     android:layout_width="331dp"
     android:layout_height="300dp"
     android:scaleType="fitCenter"
     android:layout_marginLeft="10dp"
     android:layout_marginBottom="10dp"/>

 <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/degree_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    android:textSize="20sp"
    android:gravity="center"
    android:text="@string/imei_label"
    android:layout_marginBottom="10dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imei"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>
</ScrollView>
