
<!--
! Excerpted from "Hello, Android",
! published by The Pragmatic Bookshelf.
! Copyrights apply to this code. It may not be used to create training material,
! courses, books, articles, and the like. Contact us if you are in doubt.
! We make no guarantees that this code is fit for any purpose.
! Visit http://www.pragmaticprogrammer.com/titles/eband4 for more book information.
-->

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="zhe.scrogglegame.GameFragment"
    >

   <include android:id="@+id/large1" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="0" android:layout_row="4"/>
   <include android:id="@+id/large2" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="1" android:layout_row="4"/>
   <include android:id="@+id/large3" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="2" android:layout_row="4"/>
   <include android:id="@+id/large4" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="0" android:layout_row="5"/>
   <include android:id="@+id/large5" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="1" android:layout_row="5"/>

   <include android:id="@+id/large6" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="2" android:layout_row="5"/>

   <include android:id="@+id/large7" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="0" android:layout_row="6"/>

   <include android:id="@+id/large8" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="1" android:layout_row="6"/>

   <include android:id="@+id/large9" layout="@layout/small_board"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_board_margin"
       android:layout_column="2" android:layout_row="6"/>

   <TextView
       android:id="@+id/text_timer"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:textColor="@color/textcolor"
       android:textAlignment="center"

       android:layout_column="1" android:layout_row="0"
       />
   <TextView
       android:id="@+id/score"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:textAlignment="center"

       android:layout_column="1" android:layout_row="1"
       android:text="Your Score is:"
       android:textColor="@color/textcolor"
       />
   <TextView
       android:id="@+id/text_score"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:textAlignment="center"
       android:layout_column="1" android:layout_row="2"
       />
   <TextView
       android:id="@+id/text_word"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:textAlignment="center"
       android:textColor="@color/textcolor"
       android:layout_column="1" android:layout_row="3"
       />


   <Button
       android:id="@+id/button_submit"
       android:layout_width="109dp"
       android:layout_height="wrap_content"
       android:text="@string/submit_label"
       android:layout_column="0" android:layout_row="7"
       android:textAllCaps="false" />


   <Button
       android:id="@+id/button_pause"
       android:layout_width="109dp"
       android:layout_height="wrap_content"
       android:text="@string/pause_button"
       android:layout_column="2" android:layout_row="7"
       android:textAllCaps="false"/>


   <Button
       android:id="@+id/button_phase2"
       android:layout_column="1" android:layout_row="7"
       android:layout_width="109dp"
       android:layout_height="wrap_content"
       android:text="@string/phase2_button"
       android:textAllCaps="false" />

</GridLayout>